--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -5,8 +5,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    //font-family: "Open Sans", sans-serif;
-    //font-family: "Roboto Slab", serif;
+}
+
+img {
+    height: auto;
+    max-width: 100%;
 }
 
 html {
